--- a/hello-spring/hello-spring/build.gradle
+++ b/hello-spring/hello-spring/build.gradle
@@ -18,6 +18,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' //템플릿 엔진 라이브러리
 	implementation 'org.springframework.boot:spring-boot-starter-web'  // 웹 프로젝트  라이브러리
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //jpa, jdbc 라이브러리 둘다 포함함
+	//implementation 'org.springframework.boot:spring-boot-starter-jdbc' //순수jdbc,jdbc template을 위한 라이브러리
+	runtimeOnly 'com.h2database:h2'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'  //자동으로 생성됨
 }
 
