--- a/hello-spring/hello-spring/src/main/resources/application.properties
+++ b/hello-spring/hello-spring/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.hibernate.ddl-auto= update
 logging.level.org.hibernate.SQL=debug
